# tantale

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  crate-io.md  fuck.txt  nohup.out  test.txt  test_output.txt
algorithms/: Cargo.toml  LICENCE  README.md
algorithms/src/: asha.rs  bayesian.rs  grid_search.rs  hyperband.rs  lib.rs  moasha.rs  random_search.rs  random_search_demo.rs  sha.rs  successive_halving.rs  utils.rs
algorithms/src/bayesian/: bandwidth.rs  error.rs  kernel.rs  splitter.rs  tpe.rs  weighter.rs
algorithms/src/utils/: hypervolume.rs  mo.rs
core/: Cargo.toml  README.md
core/src/: checkpointer.rs  config.rs  domain.rs  element.rs  errors.rs  experience.rs  experiment.rs  has_trait.rs  lib.rs  objective.rs  optimizer.rs  recorder.rs  sampler.rs  saver.rs  searchspace.rs  solution.rs  spikes.rs  stop.rs  utils.rs  variable.rs
core/src/checkpointer/: messagepack.rs
core/src/domain/: base.rs  bool.rs  bounded.rs  cat.rs  codomain.rs  derrors.rs  dmacros.rs  errors_domain.rs  grid.rs  mixed.rs  nodomain.rs  onto.rs  sampler.rs  unit.rs
core/src/errors/: checkerrors.rs  domerrors.rs  utilserrors.rs
core/src/experiment/: basics.rs  evaluator.rs  utils.rs
core/src/macros/: evaluator.rs  syncrun.rs  vmacros.rs
core/src/objective/: codomain.rs  criteria.rs  obj.rs  outcome.rs
core/src/optimizer/: batchtype.rs  opt.rs  parallel.rs
core/src/recorder/: csv.rs  nosaver.rs
core/src/saver/: csvsaver.rs  nosaver.rs  save.rs  serror.rs
core/src/searchspace/: spbase.rs  sppar.rs
core/src/solution/: batchtype.rs  computed.rs  id.rs  outsol.rs  partial.rs  raw.rs  shape.rs  sol.rs
core/src/spikes/: hasspikes.rs  spikecodom.rs
core/src/stop/: calls.rs  evaluated.rs  time.rs
core/src/utils/: archives.rs  dominate.rs  has_trait.rs  orderable.rs  xy.rs
core/src/variable/: advancedvar.rs  var.rs  varvec.rs  vmacros.rs
examples/: Cargo.toml  mpi_batch_evaluator.rs  mpi_batch_evaluator_fid.rs  mpi_batch_run.rs  mpi_batch_run_fid.rs  mpi_par_evaluator.rs  mpi_par_run.rs  mpi_seq_evaluator.rs  mpi_seq_evaluator_fid.rs  mpi_seq_run.rs  mpi_seq_run_fid.rs  sp_example.rs  test_mpi.rs
examples/examples/: cleaner.rs  create_batch_optimizer.rs  create_sequential_optimizer.rs  fidelity_objective.rs  gs_example.rs  mo_example.rs  mpi_batch_evaluator.rs  mpi_batch_evaluator_fid.rs  mpi_batch_run.rs  mpi_batch_run_fid.rs  mpi_batch_run_fid_loadpool.rs  mpi_mo_example.rs  mpi_quick_start.rs  mpi_seq_evaluator.rs  mpi_seq_evaluator_fid.rs  mpi_seq_run.rs  mpi_seq_run_fid.rs  mpi_seq_run_fid_loadpool.rs  multi_step_objective.rs  quick_start.rs  quick_start_mpi.rs  quick_start_threaded.rs  rs_example.rs  run_checker.rs  run_mpi.sh  sp_example.rs  test_mpi.rs
examples/examples/mpi_test_pytantale_objective_async/: main.rs  test_pytantale_async.rs
examples/examples/mpi_test_pytantale_objective_batch/: main.rs  test_pytantale_batch.rs
examples/examples/mpi_test_pytantale_stepped_async/: main.rs  test_pytantale_fid_async.rs
examples/examples/mpi_test_pytantale_stepped_batch/: main.rs  test_pytantale_fid_batch.rs
macros/: Cargo.toml  README.md
macros/src/: csvwritable.rs  funcstate.rs  hpo.rs  lib.rs  mixed.rs  objective.rs  optinfo.rs  optstate.rs  outcome.rs  pyhpo.rs  searchspace.rs  solinfo.rs  stepped.rs
python/: Cargo.toml  README.md
python/src/: lib.rs  pydomain.rs  pyfunction.rs  pyoutcome.rs  pyutils.rs
src/: core.rs  (+11 more)
test_suite/: Cargo.toml  test.rs
test_suite/tests/: init_cod.rs  init_dom.rs  init_func.rs  init_outcome.rs  init_output.rs  init_sinfo.rs  init_sp.rs  test_domain.rs  test_sampler.rs
test_suite/tests/macros/: main.rs  mixed.rs  objective.rs  outcome.rs  searchspace.rs  sp_test.rs
test_suite/tests/test_codomain/: main.rs  test_extraction.rs
test_suite/tests/test_codomain.rs/: test_extraction.rs
test_suite/tests/test_convertible/: test_convertible.rs
test_suite/tests/test_criteria/: main.rs
test_suite/tests/test_csv/: main.rs  test_cod_csv.rs  test_dom_csv.rs  test_dom_var.rs  test_folder_csv.rs  test_id_csv.rs  test_out_csv.rs  test_sp_csv.rs  test_var_csv.rs
test_suite/tests/test_evaluator/: main.rs  test_evaluator_creation.rs  test_objective_creation.rs
test_suite/tests/test_objective/: main.rs  test_objective_creation.rs
test_suite/tests/test_run/: demo.rs  main.rs  test_seq_run.rs
test_suite/tests/test_searchspace/: main.rs  test_searchspace_creation.rs
test_suite/tests/test_serde/: main.rs  test_computed_serde.rs  test_opt_serde.rs  test_partial_serde.rs  test_saver_serde.rs  test_stop_serde.rs
test_suite/tests/test_solutions/: main.rs  test_csolution_creation.rs  test_csolution_vec_creation.rs  test_psolution_creation.rs  test_psolution_vec_creation.rs  test_solution_creation.rs  test_solution_par_vec_creation.rs  test_solution_vec_creation.rs
test_suite/tests/test_variable/: test_variable_creation.rs  test_variable_onto.rs  test_variable_samplers.rs
tests_python/: Cargo.toml  README.md
tests_python/tests/: cleaner.rs  run_checker.rs
tests_python/tests/test_pytantale_obj/: function.py  main.rs  test_pytantale.rs
tests_python/tests/test_pytantale_objective_async/: main.rs  test_pytantale_async.rs
tests_python/tests/test_pytantale_objective_async_parrun/: main.rs  test_pytantale_async_parrun.rs
tests_python/tests/test_pytantale_objective_batch/: main.rs  test_pytantale_batch.rs
tests_python/tests/test_pytantale_objective_batch_parrun/: function_batch_parrun.py  main.rs  test_pytantale_batch_parrun.rs
tests_python/tests/test_pytantale_objective_spikes_const/: function_spikes_const.py  main.rs  test_pytantale_spikes_const.rs
tests_python/tests/test_pytantale_objective_spikes_cost/: function_spikes_cost.py  main.rs  test_pytantale_spikes_cost.rs
tests_python/tests/test_pytantale_objective_spikes_multi/: main.rs  test_pytantale_spikes_multi.rs
tests_suite/: Cargo.toml  README.md  test.txt
tests_suite/tests/: cleaner.rs  init_cod.rs  init_dom.rs  init_func.rs  init_outcome.rs  init_sinfo.rs  init_sp.rs  init_sp_grid.rs  run_checker.rs  test_domain.rs  test_sampler.rs
(+172 files in other folders)
