[package]
name = "tantale"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
rust-version = "1.84.1"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[badges]
maintenance = { status = "actively-developed" }


[workspace]
members = ["macros", "core", "algorithms", "tests_suite", "examples"]

[workspace.dependencies]
tantale_core = { path = "core" }
tantale_macros = { path = "macros" }
tantale_algos = { path = "algorithms" }
tantale_tests = { path = "tests_suite" }
tantale_examples = { path = "examples" }

[dependencies]
tantale_core.workspace = true
tantale_macros.workspace = true
tantale_algos.workspace = true

[features]
mpi = ["tantale_core/mpi"]

[dev-dependencies]
tantale_tests.workspace = true
tantale_examples.workspace = true
num = "0.4.3"
paste = "1.0.15"
rand = "0.9.0"
rayon = "1.10.0"
csv = "1.1"
serde = {version="1.0.219", features=["derive","rc"]}
serde_json = "1.0.142"
mpi = {version = "0.8.0", features=["derive"]}
bincode = {version = "2.0.1", features=["serde"]}
