[package]
name = "tantale"
version = "0.1.0"
edition = "2024"
license = "CECILL-C"
readme = "README.md"
rust-version = "1.91.1"
repository = "https://github.com/ThomasFirmin/tantale"
description = "Tantale is a Rust library for Automated Machine Learning (AutoML) focusing on Hyperparameter Optimization and Neural Architecture Search. It provides a modular and extensible framework for defining search spaces, objectives, and optimization algorithms, with support for distributed computing and parallel execution."
categories = ["machine-learning", "optimization", "neural-networks", "automl"]
keywords = ["automl", "hpo", "nas"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[badges]
maintenance = { status = "actively-developed" }


[workspace]
members = ["macros", "core", "algorithms"]

[workspace.dependencies]
tantale_core = { path = "core", version = "0.1.0" }
tantale_macros = { path = "macros", version = "0.1.0" }
tantale_algos = { path = "algorithms", version = "0.1.0" }

[dependencies]
tantale_core.workspace = true
tantale_macros.workspace = true
tantale_algos.workspace = true

[features]
mpi = ["tantale_core/mpi", "tantale_algos/mpi"]

[dev-dependencies]
num = "0.4.3"
paste = "1.0.15"
rand = "0.9.0"
rayon = "1.10.0"
csv = "1.1"
serde = {version="1.0.219", features=["derive","rc"]}
rmp-serde = "1.3.0"
mpi = {version = "0.8.0", features=["derive"]}
bincode = {version = "2.0.1", features=["serde"]}
