[workspace]
members = ["macros", "core", "algorithms", "python","tests_suite", "tests_python", "examples"]

[workspace.package]
authors = ["Thomas Firmin"]
version = "0.1.12"
edition = "2024"
license = "CECILL-C"
readme = "README.md"
rust-version = "1.91.1"
repository = "https://github.com/ThomasFirmin/tantale"
documentation = "https://docs.rs/tantale/latest/tantale/"
description  = "Tantale is a Rust library for Automated Machine Learning (AutoML) focusing on Hyperparameter Optimization and Neural Architecture Search. It provides a modular and extensible framework for defining search spaces, objectives, and optimization algorithms, with support for distributed computing and parallel execution."
keywords     = ["automl", "hpo", "nas"]

[workspace.dependencies]
tantale        = {path = ".", version = "0.1.12"}
tantale_core   = {path = "core", version = "0.1.12"}
tantale_macros = {path = "macros", version = "0.1.12"}
tantale_algos  = {path = "algorithms", version = "0.1.12"}
tantale_python  = {path = "python", version = "0.1.12"}

[package]
name                    = "tantale"
version.workspace       = true
edition.workspace       = true
authors.workspace       = true
license.workspace       = true
readme.workspace        = true
rust-version.workspace  = true
repository.workspace    = true
documentation.workspace = true
description.workspace   = true
keywords.workspace      = true

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
tantale_core.workspace   = true
tantale_macros.workspace = true
tantale_algos.workspace  = true
tantale_python = {workspace = true, optional = true}

[features]
mpi = ["tantale_core/mpi", "tantale_algos/mpi"]
py = ["tantale_python", "tantale_macros/py"]

[dev-dependencies]
num = "0.4.3"
paste = "1.0.15"
rand = "0.9.0"
rayon = "1.10.0"
csv = "1.1"
serde = {version="1.0.219", features=["derive","rc"]}
rmp-serde = "1.3.0"
mpi = {version = "0.8.0", features=["derive"]}
bincode = {version = "2.0.1", features=["serde"]}
