[package]
name = "tantale_algos"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
repository.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tantale_core = { workspace = true }
num = "0.4.3"
rand = "0.9.0"
rayon = {version = "1.10.0"}
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.142"

[features]
mpi = ["tantale_core/mpi"]

[dev-dependencies]
tantale = { path = "..", package = "tantale" }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]