[package]
name = "tantale_algos"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
repository.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tantale_core = { workspace = true }
num = { workspace = true}
rand = { workspace = true}
serde = { workspace = true, features=["derive","rc"]}
rayon = {workspace = true}
itertools = {workspace = true}
statrs = {version="0.18.0", optional = true}

[features]
mpi = ["tantale_core/mpi"]
bayes = ["statrs"]

[dev-dependencies]
tantale = { path = "..", package = "tantale" }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
