[package]
name = "tantale_core"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
repository.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
num = { workspace = true}
rand = { workspace = true}
rayon = {workspace = true}
serde = { workspace = true, features=["derive","rc"]}
ndarray = { workspace = true}
itertools = {workspace = true}
csv = "1.1"
rmp-serde = "1.3.0"
num_cpus = "1.17.0"
indexmap = "2.13.0"
mpi = {version = "0.8.0", features=["derive"], optional=true}
bincode = {version = "2.0.1", features=["serde"], optional=true}
bitvec = { version = "1.0.1", features = ["serde"], optional=true }

[features]
mpi = ["dep:mpi","dep:bincode","dep:bitvec"]
spikes = []

[dev-dependencies]
tantale = { path = "..", package = "tantale" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "katex-header.html"]