[package]
name = "tantale_examples"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
repository.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
tantale = { workspace = true, features=["mpi","py"]}
serde = { workspace = true, features=["derive","rc"]}
rand = { workspace = true }
rmp-serde = "1.3.0"
csv = "1.1"
bincode = {version = "2.0.1", features=["serde"]}
mpi = {version = "0.8.0", features=["derive"]}

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]