[package]
name = "tantale_macros"
version = "0.1.0"
edition = "2024"
license = "CECILL-C"
readme = "README.md"
rust-version = "1.91.1"

[lib]
name = "tantale_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
tantale_core = {path="../core"}
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = {version="2.0.101", features=["full"]}