[package]
name = "tantale_macros"
version = "0.1.0"
edition = "2024"
license = "CECILL-C"
readme = "README.md"
rust-version = "1.91.1"
repository = "https://github.com/ThomasFirmin/tantale"
description = "This the macros module for Tantale. Tantale is a Rust library for Automated Machine Learning (AutoML) focusing on Hyperparameter Optimization and Neural Architecture Search. It provides a modular and extensible framework for defining search spaces, objectives, and optimization algorithms, with support for distributed computing and parallel execution."
categories = ["machine-learning", "optimization", "neural-networks", "automl"]
keywords = ["automl", "hyperparameter optimization", "neural architecture search", "rust", "distributed computing", "parallel execution"]

[lib]
name = "tantale_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
tantale_core = {path="../core", version = "0.1.0"}
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = {version="2.0.101", features=["full"]}