[package]
name = "tantale_macros"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
repository.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true

[lib]
name = "tantale_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = {version="2.0.101", features=["full"]}

[dev-dependencies]
tantale = { path = "..", package = "tantale" }