[package]
name = "tantale_python"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
repository.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
tantale_core.workspace = true
pyo3 = {version = "0.28.2", features = ["auto-initialize"]}
serde = {version = "1.0.219"}
num = "0.4.3"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
