[package]
name = "tantale_python_tests"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
repository.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
tantale = {workspace = true, features = ["py"]}
num = "0.4.3"
paste = "1.0.15"
rand = "0.9.0"
rayon = {version = "1.10.0"}
csv = "1.1"
serde = {version="1.0.219", features=["derive","rc"]}
rmp-serde = "1.3.0"
num_cpus = "1.17.0"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
