[package]
name = "tantale_tests"
version = "0.1.0"
edition = "2024"
license = "CECILL-C"
readme = "README.md"
rust-version = "1.91.1"

[dependencies]
tantale = { path = "../"}
tantale_core = { path = "../core", features=["mpi"]}
tantale_macros = { path = "../macros"}
tantale_algos = { path = "../algorithms"}
num = "0.4.3"
paste = "1.0.15"
rand = "0.9.0"
rayon = {version = "1.10.0"}
csv = "1.1"
serde = {version="1.0.219", features=["derive","rc"]}
rmp-serde = "1.3.0"
num_cpus = "1.17.0"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]