[package]
name = "tantale_tests"
version = "0.1.0"
edition = "2024"
license = "CECILL-C"
readme = "README.md"
rust-version = "1.91.1"
repository = "https://github.com/ThomasFirmin/tantale"
description = "This the tests module for Tantale. Tantale is a Rust library for Automated Machine Learning (AutoML) focusing on Hyperparameter Optimization and Neural Architecture Search. It provides a modular and extensible framework for defining search spaces, objectives, and optimization algorithms, with support for distributed computing and parallel execution."
categories = ["machine-learning", "optimization", "neural-networks", "automl"]
keywords = ["automl", "hyperparameter optimization", "neural architecture search", "distributed computing", "parallel execution"]

[dependencies]
tantale = { path = "../", version = "0.1.0" }
tantale_core = { path = "../core", version = "0.1.0" }
tantale_macros = { path = "../macros", version = "0.1.0" }
tantale_algos = { path = "../algorithms", version = "0.1.0" }
num = "0.4.3"
paste = "1.0.15"
rand = "0.9.0"
rayon = {version = "1.10.0"}
csv = "1.1"
serde = {version="1.0.219", features=["derive","rc"]}
rmp-serde = "1.3.0"
num_cpus = "1.17.0"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]